--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "java.project.referencedLibraries": {
         "include": [
             "lib/**/*.jar",
-            "/Users/son0585/Downloads/Coding Repositories/core.jar"
+            "/Users/son0585/Downloads/Coding Repositories/core.jar",
+            "c:\\Users\\Nathan\\Downloads\\Coding Homework\\core.jar"
         ],
         "exclude": [
             "lib/repl_core.jar"
